# frugon

./: .coveragerc-strict  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.5.md  RELEASE_NOTES_v0.2.6.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pricing-sync.yml  quality-sync.yml  release.yml
scripts/: check-commit-attribution.sh  ci-local.sh  gen_sample_logs.py
src/frugon/: __init__.py  _progress.py  _store.py  capture.py  cli.py  cost.py  measure.py  model_id.py  pricing.py  quality.py  report.py  routing.py
src/frugon/data/: pricing.json  quality.json
tests/: conftest.py  test_anthropic_bare_name_pricing.py  test_candidate_caption.py  test_candidate_headline_block_agreement.py  test_candidate_pool.py  test_candidates_html_styling.py  test_candidates_legend_restructure.py  test_canonical_bridge.py  test_capture.py  test_capture_feedback.py  test_ci_config.py  test_cli.py  test_cli_concurrency_flag.py  test_cli_key_hint.py  test_cli_measure_estimate.py  test_cli_report_formats.py  test_cli_report_measure_order.py  test_cli_smoke.py  test_cli_utf8.py  test_commit_attribution_guard.py  test_cost.py  test_cost_gzip_streaming.py  test_default_pool_candidates_block.py  test_demo_measure_disclosure.py  test_demo_pinning.py  test_effort_fold_pricing_guard.py  test_escalation_ladder.py  test_escalation_rendering.py  test_flagship_coverage.py  test_floor_saving_pct.py  test_judge_fallback.py  test_measure.py  test_measure_both_failed.py  test_measure_concurrency.py  test_measure_cost.py  test_measure_effective_cost.py  test_measure_judge_methodology.py  test_measure_judge_noise_guard.py  test_measure_precheck.py  test_measure_sampling_error.py  (+40 more)
