[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frugon"
version = "0.2.3"
description = "Free, local, open-source LLM cost analyzer CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rodiun", email = "hello@rodiun.io" }]
requires-python = ">=3.10"
keywords = ["llm", "cost", "optimization", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tokencost>=0.1.26",
    "tiktoken>=0.7.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
measure = [
    "litellm>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # Python 3.10 fallback for tomllib (stdlib from 3.11). Used by tests/test_ci_config.py.
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Rodiun/frugon"
"Bug Tracker" = "https://github.com/Rodiun/frugon/issues"
Documentation = "https://frugon.rodiun.io"

[project.scripts]
frugon = "frugon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frugon"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = [
    # line-length is a soft target (line-length = 100 above): `ruff check` reflows
    # imports and flags most style issues, but E501 is not gated because several
    # files carry unavoidably long literals — the inlined report CSS/HTML in
    # report.py and the realistic prompt corpus in scripts/gen_sample_logs.py.
    # Adopting `ruff format --check` repo-wide (which would normalise all files)
    # is tracked as its own normalization change, not smuggled into a feature PR.
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["frugon"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

# Cost/pricing/routing modules get full strict mode once they exist.
# Loosen only for the CLI entry point (Typer generates some any-typed internals).
# Cost/pricing/routing modules get full strict mode.
# warn_unused_ignores = false allows `# type: ignore[import-untyped]` on
# tokencost which ships stubs in some environments but not all.
[[tool.mypy.overrides]]
module = "frugon.cost"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "frugon.routing"
strict = true

[[tool.mypy.overrides]]
module = "frugon.pricing"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "frugon.report"
strict = true

[[tool.mypy.overrides]]
module = "frugon.measure"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "frugon.quality"
strict = true
warn_unused_ignores = false

# tokencost ships stubs in some environments but not all.
[[tool.mypy.overrides]]
module = "tokencost"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litellm"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=frugon --cov-report=term-missing --cov-fail-under=80 -q"
